--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,19 +11,26 @@ pool:
   - msbuild
   - visualstudio
 
+variables:
+  BuildConfiguration: 'Release'
+
 # Hier volgende daadwerkelijke "build-stappen". In dit geval hebben we een "eenvoudige" build pipeline - later zullen we kijken naar pipelines met meerdere "stages".
 steps:
+### De configuratie van een "task" hoef je niet te onthouden: er zitten visuele hulpmiddelen in Azure DevOps Pipelines ingebakken om *tasks* toe te voegen en de instellingen hiervoor te doen.
 - task: VSBuild@1
+  displayName: 'Build Data Warehouse'
   inputs:
     solution: 'src/sqldatabase/**/*.sln'
-    configuration: 'Release'
+    configuration: '$(BuildConfiguration)'
 
 - task: CopyFiles@2
+  displayName: 'Copy Files to: $(Build.ArtifactStagingDirectory)'
   inputs:
     SourceFolder: '$(Build.SourcesDirectory)'
-    Contents: '**/bin/Release/**/*.dacpac'
+    Contents: '**/bin/$(BuildConfiguration)/**/*.dacpac'
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
-    flattenFolders: true
+
+# De Artifact is het resultaat van deze pipeline. Omdat we deze publiceren, kan een deployment-pipeline deze weer oppikken om "uit te rollen" naar andere omgevingen.
 - task: PublishPipelineArtifact@1
   inputs:
     targetPath: '$(Build.ArtifactStagingDirectory)'
