Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ steps:
 - task: VSBuild@1
   displayName: 'Build Data Warehouse'
   inputs:
-    solution: 'src/sqldatabase/**/*.sln'
+    solution: 'samples/databases/wide-world-importers/wwi-dw-ssdt/WideWorldImportersDW.sln'
     configuration: '$(BuildConfiguration)'
 
 - task: CopyFiles@2
